Give the navbar element fixed position and shift to the lef outside the page borders

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -95,4 +95,15 @@ nav .links_s li a {
     margin-right: 40px;
 }
 
+.links_s {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
+}
+
+
+
 
